--- a/RelaxPuzzles3D/Pages/Main/index.html
+++ b/RelaxPuzzles3D/Pages/Main/index.html
@@ -15,9 +15,9 @@
 		class="game icon">
 
 		<li class="game features">
-			<div class="game featur"></div>
-			<div class="game featur"></div>
-			<div class="game featur"></div>
+			<div class="game featur"><p>3+</p></div>
+			<div class="game featur"><p>free</p></div>
+			<div class="game featur"><p>>100 downloads</p></div>
 			<!-- <div class="game featur"></div> -->
 		</li>
 
