--- a/RelaxPuzzles3D/Pages/Main/index.html
+++ b/RelaxPuzzles3D/Pages/Main/index.html
@@ -10,6 +10,9 @@
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 	<script src="script.js"></script>
 
+
+	<div class="background"></div>
+
 	<div class="content">
 		<img src="https://play-lh.googleusercontent.com/mKGsJEpaPOhUIMcUCtHnkDwvWA0UqOC8iTSBIeHrythTL_cIrptafrRtAJ1z0nAzcw=s180-rw"
 		class="game icon">
